# StickerHub

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  pre-commit.yml
src/stickerhub/: __init__.py  config.py  main.py
src/stickerhub/adapters/: feishu_longconn.py  feishu_sender.py  telegram_source.py
src/stickerhub/core/: models.py  ports.py
src/stickerhub/services/: binding.py  media_converter.py  relay.py
src/stickerhub/utils/: logging.py  url_masking.py
tests/: test_binding_sqlite.py  test_feishu_longconn.py  test_telegram_source.py
