[project]
name = "stickerhub"
version = "0.1.0"
description = "在不同平台之间转换表情包（Sticker）的工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "python-telegram-bot>=21.10,<22",
  "httpx>=0.27.2,<0.28",
  "pydantic>=2.10.6,<3",
  "pydantic-settings>=2.7.1,<3",
  "lottie>=0.7.2,<0.8",
  "lark-oapi>=1.4.18,<2",
]

[project.scripts]
stickerhub = "stickerhub.main:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pre-commit>=4.1.0,<5",
  "ruff>=0.9.7,<0.10",
  "pytest>=8.3.4,<9",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
